--- a/WcgWebOne/src/main/resources/application.yml
+++ b/WcgWebOne/src/main/resources/application.yml
@@ -2,3 +2,22 @@
 spring:
   profiles:
     active: dev
+   #模板配置
+  thymeleaf:
+    prefix: classpath:/templates/
+    suffix: .html
+    mode: HTML5
+    encoding: UTF-8
+#热部署配置无缓存
+    cache: false
+#及时更新
+  resources:
+    chain:
+      strategy:
+        content:
+          enabled: true
+          paths:
+          - /**
+  mvc:
+    static-path-pattern: /static/**
+        
