--- a/WcgWebOne/pom.xml
+++ b/WcgWebOne/pom.xml
@@ -55,6 +55,7 @@
          	<groupId>mysql</groupId>
          	<artifactId>mysql-connector-java</artifactId>
          </dependency>
+		<!--网页支持-->
          <dependency>
          	<groupId>org.springframework.boot</groupId>
          	<artifactId>spring-boot-starter-thymeleaf</artifactId>
