--- a/WcgWebOne/src/main/resources/application-pro.yml
+++ b/WcgWebOne/src/main/resources/application-pro.yml
@@ -1,14 +1,25 @@
-server:  
-#配置端口
-  port: 8082  
-  session-timeout: 30  
-  tomcat.max-threads: 0  
-  tomcat.uri-encoding: UTF-8  
-  
-spring: 
-#数据库配置 
-  datasource:  
-    url: jdbc:mysql://localhost:3306/wcgfirst  
-    username : root  
-    password : root  
-    driverClassName : com.mysql.jdbc.Driver  
+server:
+  #配置端口
+  port: 8080
+  session-timeout: 30
+  tomcat.max-threads: 0
+  tomcat.uri-encoding: UTF-8
+
+spring:
+  #数据源配置
+  datasource:
+    url: jdbc:mysql://127.0.0.1:3306/wcgfirst?serverTimezone=GMT%2B8
+    username : root
+    password : wcg498082717
+    driverClassName : com.mysql.cj.jdbc.Driver
+
+    logging:
+  level:
+    learning: trace
+
+mybatis:
+  #实体类所做包
+  type-aliases-package: learning.model
+  #mapper.xml所在位置
+  mapper-locations: classpath:mapper/*.xml
+
