--- a/WcgWebOne/src/main/resources/application-test.yml
+++ b/WcgWebOne/src/main/resources/application-test.yml
@@ -9,26 +9,22 @@ spring:
 
   #数据源配置
   datasource:
-#    url: jdbc:mysql://139.159.157.120:3306/wcgfirst?serverTimezone=GMT%2B8
-#    username : root
-#    password : wcg498082717
-#    driverClassName : com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://139.159.157.120:3306/wcgfirst?serverTimezone=GMT%2B8
+    url: jdbc:mysql://139.159.157.120:3306/wcgfirst
     username: root
     password: wcg498082717
-    driver-class-name: com.mysql.jdbc.Driver
+    driver-class-name: com.mysql.cj.jdbc.Driver
 
-    logging:
-  level:
-    learning: trace
-  thymeleaf:
-    prefix: classpath:/templates/
-  mvc:
-    static-path-pattern: /static/**
-
-mybatis:
-  #实体类所做包
-  type-aliases-package: learning.model
-  #mapper.xml所在位置
-  mapper-locations: classpath:mapper/*.xml
+#    logging:
+#  level:
+#    learning: trace
+#  thymeleaf:
+#    prefix: classpath:/templates/
+#  mvc:
+#    static-path-pattern: /static/**
+#
+#mybatis:
+#  #实体类所做包
+#  type-aliases-package: learning.model
+#  #mapper.xml所在位置
+#  mapper-locations: classpath:mapper/*.xml
 
