--- a/WcgWebOne/src/main/resources/application-test.yml
+++ b/WcgWebOne/src/main/resources/application-test.yml
@@ -4,6 +4,11 @@ server:
   session-timeout: 30
   tomcat.max-threads: 0
   tomcat.uri-encoding: UTF-8
+  ssl:
+    key-store: classpath:keystore.p12
+    key-store-password: 123456
+    key-store-type: PKCS12
+    key-alias: tomcat
 
 spring:
 
